--- a/mopidy_musicbox_webclient/static/index.html
+++ b/mopidy_musicbox_webclient/static/index.html
@@ -302,7 +302,9 @@
 
     <div class="nowPlaying-artistInfo">
     <h3 id="modalname"></h3>
-        <p class="artistAlbumLine"><span id="modalartist"></span> - <span id="modalalbum"></span></p>
+        <p class="artistAlbumLine">
+          <span id="modalartist"></span><br />
+          <span id="modalalbum"></span></p>
     </div>
 
     <div id="slidercontainer"><!-- slider for track position -->
@@ -414,7 +416,7 @@
         <form>
         <div class="ui-grid-a pl-breakpoint">
         <div class="ui-block-a" style="padding: 5px">
-            <p>Select a service and add the URL of the stream you want to listen to.
+            <p>Select a service and add the URL PLOP of the stream you want to listen to.
                 <select id="selectstreamservice" data-native-menu="true">
                     <option value="">Internet Radio (mp3, m3u, asx, etc)</option>
                     <option value="yt">YouTube</option>
@@ -466,7 +468,7 @@
         </div>
 </div>
 <div data-role="footer" data-tap-toggle="false" data-position="fixed" id="nowPlayingFooter">
-
+<!--
     <p id="buttons" style="float:right; margin-top: 20px; margin-right: 5px;">
                    <a href="#" onclick="doRandom(); return false" title="Random"><i class="fa fa-random" id="randombt"></i></a>
             &nbsp; <a href="#" onclick="doRepeat(); return false" title="Repeat"><i class="fa fa-repeat" id="repeatbt"></i></a>
@@ -474,11 +476,16 @@
             &nbsp; <a href="#" onclick="doSingle(); return false" title="Single"><i class="fa fa-dot-circle-o" id="singlebt"></i></a>
             &nbsp; <a href="#" onclick="doShuffle(); return false" title="Shuffle"><i class="fa fa-arrows-v" id="shufflebt"></i></a>
     </p>
+  -->
 
         <div class="nowPlayingControls" style="float:left; margin-left: 5px;">
                    <a href="#" onclick="doPrevious(); return false"><span id="btprev" title="Previous"><i class="fa fa-fast-backward"></i></span></a>
-            &nbsp; <a href="#" onclick="doPlay(); return false"><span id="btplayNowPlaying" title="Play"><i class="fa fa-play"></i></span></a>
-            &nbsp; <a href="#" onclick="doNext(); return false"><span id="btnext" title="Next"><i class="fa fa-fast-forward"></i></span></a>
+        </div>
+        <div class="nowPlayingControls" style="float:center;"> 
+                   <a href="#" onclick="doPlay(); return false"><span id="btplayNowPlaying" title="Play"><i class="fa fa-play"></i></span></a>
+        </div>
+        <div class="nowPlayingControls" style="float:right; margin-right: 5px;">
+                   <a href="#" onclick="doNext(); return false"><span id="btnext" title="Next"><i class="fa fa-fast-forward"></i></span></a>
         </div>
 </div>
 <!-- /footer -->
